@@ -16,6 +16,23 @@ const {
 const HB_INTERVAL_MS = 2500
 
 module.exports = class AOAdapter extends EventEmitter {
+  static getTimeFrames () {
+    return {
+      '1 Minute': '1m',
+      '5 Minutes': '5m',
+      '15 Minutes': '15m',
+      '30 Minutes': '30m',
+      '1 Hour': '1h',
+      '3 Hours': '3h',
+      '6 Hours': '6h',
+      '12 Hours': '12h',
+      '1 Day': '1D',
+      '7 Days': '7D',
+      '14 Days': '14D',
+      '1 Month': '1M',
+    }
+  }
+
   constructor ({
     wsURL, restURL, apiKey, apiSecret, agent, dms, withHeartbeat
   }) {
